--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
             <li>Tecnologia</li>
             <li>Importância da Tecnologia digital</li>
+            <li>Calculadora</li>
         </ul>
     </header>
 
