--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <header>
-        <h1>Vai ser uma imagem aqui</h1>
+        <header>
+            <img src="" alt="">
+
+        </header>
         <ul>
             <li>Tecnologia</li>
             <li>Importância da Tecnologia digital</li>
-            <li>Calculadora</li>
+            <li>Calculadora:A Revolução dos Números</li>
         </ul>
     </header>
 
