--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
         <header class="cabecalho"
             <img class="cabecalho-imagem" src="escritório.webp" alt="logo da tecnologia">
+            <ul class="cabecalho-lista">
 
         </header>
         <ul>
-            <li>Tecnologia</li>
-            <li>Importância da Tecnologia digital</li>
-            <li>Calculadora:A Revolução dos Números</li>
+            <li class="cabecalho-lista-item">Tecnologia</li>
+            <li class="cabecalho-lista-item">Importância da Tecnologia digital</li>
+            <li class="cabecalho-lista-item">Calculadora:A Revolução dos Números</li>
         </ul>
     </header>
 
