--- a/index.html
+++ b/index.html
@@ -1,24 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-        <header class="cabecalho"
-            <img class="cabecalho-imagem" src="escritório.webp" alt="logo da tecnologia">
-            <ul class="cabecalho-lista">
+<html lang="pt-br"></html>
 
+    <head>
+        <meta charset="UTF-8">
+        <title>Tecnologia na Calculadora</title>
+
+        <style>
+            body {
+                color: rgb(255, 255, 255);
+                background-color: rgb(51, 51, 51);
+            }
+            #economia {
+                width: 50%;
+                
+            }
+            h1 {
+                padding-left: 20px;
+                text-transform: uppercase;
+                font-weight: bold;
+                font-size: 22px;
+
+            }
+            h2 {
+                text-align: center;
+            }
+            p {
+                text-align: center;
+            }
+            h3 {
+                text-align: center;
+                padding: 20px;
+            }
+            ul {
+                display:inline-block;
+                vertical-align: top;
+                width: 20%;
+                margin-right: 25%;
+            }
+            #anao2{
+                width: 50%;
+            }
+        </style>
+    </head>
+
+    <body>
+        <img id="calculadora" src="calculadcora.avif">
+        <header>
+            <h1>Matemática Cotidianas: O Impacto da Calculadora em Nossas Vidas"</h1>
+            <h2>Calculadora no Dia-Dia</h2>
         </header>
-        <ul>
-            <li class="cabecalho-lista-item">Tecnologia</li>
-            <li class="cabecalho-lista-item">Importância da Tecnologia digital</li>
-            <li class="cabecalho-lista-item">Calculadora:A Revolução dos Números</li>
-        </ul>
-    </header>
+        
+        <h3>Origem</h3>
 
-</body>
+        <p>A primeira calculadora eletrônica de estado sólido foi criada no início da década de 1960. Dispositivos de bolso tornaram-se disponíveis na de 1970, especialmente depois que o Intel 4004, o primeiro microprocessador, foi desenvolvido pela Intel para a empresa japonesa de calculadoras Busicom
+        <p>Além das áreas mencionadas, a tecnologia também revolucionou aspectos do cotidiano, como a educação.
+             Plataformas online e aplicativos educacionais tornam o aprendizado acessível a todos, permitindo que pessoas de diferentes idades e localidades se aprofundem em novos conhecimentos.
+              Aulas virtuais e recursos interativos oferecem uma experiência de aprendizado mais dinâmica. Assim, a tecnologia não apenas facilita a comunicação e o trabalho, mas também democratiza a educação, tornando-se um pilar fundamental no desenvolvimento pessoal e profissional.</p>
+
+        <h4>exemplos</h4>
+
+        <p style="font-size: 20px"><em>é usado no cotidiano </em></p>
+
+        <h3>Pros</h3>
+
+        <ul>
+            <li>Comunicação: Apps como WhatsApp e redes sociais conectam pessoas instantaneamente.</li>
+            <li>Educação: Plataformas como Coursera disponibilizam cursos online, democratizando o aprendizado.</li>
+        </ul>
+        <a href="tecnologia.html">tecnologia na economia</a>
+        <img id="economia" src="economia2.jpg">
+    </body>
 </html>
