--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <body>
         <img id="calculadora" src="calculadcora.avif">
         <header>
-            <h1>Matemática Cotidianas: O Impacto da Calculadora em Nossas Vidas"</h1>
+            <h1>Matemática Cotidianas: O Impacto da Calculadora em Nossas Vidas</h1>
             <h2>Calculadora no Dia-Dia</h2>
         </header>
         
@@ -57,17 +57,14 @@
              Plataformas online e aplicativos educacionais tornam o aprendizado acessível a todos, permitindo que pessoas de diferentes idades e localidades se aprofundem em novos conhecimentos.
               Aulas virtuais e recursos interativos oferecem uma experiência de aprendizado mais dinâmica. Assim, a tecnologia não apenas facilita a comunicação e o trabalho, mas também democratiza a educação, tornando-se um pilar fundamental no desenvolvimento pessoal e profissional.</p>
 
-        <h4>exemplos</h4>
-
-        <p style="font-size: 20px"><em>é usado no cotidiano </em></p>
 
         <h3>Pros</h3>
 
         <ul>
-            <li>Comunicação: Apps como WhatsApp e redes sociais conectam pessoas instantaneamente.</li>
-            <li>Educação: Plataformas como Coursera disponibilizam cursos online, democratizando o aprendizado.</li>
+            <li>Facilidade de resolver contas muito complicadas em um segundo.</li>
+            <li>Você pode estudar matemática apenas usando a calculadora do seu celular.</li>
         </ul>
-        <a href="tecnologia.html">tecnologia na economia</a>
-        <img id="economia" src="economia2.jpg">
+        <a href="tecnologia.html">tecnologia nas escolas</a>
+        <img id="escola" src="escola.png">
     </body>
 </html>
